--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -1,5 +1,3 @@
-FROM {{ .From }}
-
 {{- $gosu := index .Packages "gosu" }}
 {{- $postgresql := index .Packages "postgresql" }}
 
@@ -26,21 +24,8 @@ RUN set -x \
 	&& wget -q -O /usr/local/src/gosu.tar.gz "https://github.com/tianon/gosu/archive/$GOSU_VERSION.tar.gz" \
 # extract gosu binary and check signature
 	&& export GNUPGHOME="$(mktemp -d)" \
-	&& found='' \
-	&& for server in \
-		pool.sks-keyservers.net \
-		ha.pool.sks-keyservers.net \
-		pgp.mit.edu \
-		na.pool.sks-keyservers.net \
-		eu.pool.sks-keyservers.net \
-		oc.pool.sks-keyservers.net \
-		ha.pool.sks-keyservers.net \
-		hkp://p80.pool.sks-keyservers.net:80 \
-		hkp://keyserver.ubuntu.com:80 \
-	; do \
-		gpg --keyserver $server --recv-keys {{ $gosu.Gpg }} \
-			&& found="yes" && break; \
-	done; test -n "$found" \
+	&& export GOSU_GPG={{ $gosu.Gpg }} \
+	&& {{ $gosu.RetryCommand }} \
 	&& gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
 	&& rm -rf "$GNUPGHOME" /usr/local/bin/gosu.asc \
 	&& chmod +x /usr/local/bin/gosu \
@@ -57,22 +42,7 @@ RUN mkdir /docker-entrypoint-initdb.d
 RUN set -ex; \
 	key='{{ $postgresql.Gpg }}'; \
 	export GNUPGHOME="$(mktemp -d)"; \
-	found=''; \
-	for server in \
-		pool.sks-keyservers.net \
-		ha.pool.sks-keyservers.net \
-		pgp.mit.edu \
-		na.pool.sks-keyservers.net \
-		eu.pool.sks-keyservers.net \
-		oc.pool.sks-keyservers.net \
-		ha.pool.sks-keyservers.net \
-		hkp://p80.pool.sks-keyservers.net:80 \
-		hkp://keyserver.ubuntu.com:80 \
-	; do \
-		gpg --keyserver ${server} --recv-keys "$key" \
-			&& found="yes" && break; \
-	done; \
-	test -n "$found"; \
+	{{ $postgresql.RetryCommand }}; \
 	gpg --export "$key" > /etc/apt/trusted.gpg.d/postgres.gpg; \
 	rm -rf "$GNUPGHOME"; \
 	apt-key list
